--- a/CIFE/CIFE.project
+++ b/CIFE/CIFE.project
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <CodeLite_Project Name="CIFE" Version="11000" InternalType="GUI">
   <VirtualDirectory Name="Resource Files">
+    <File Name="cife.rc"/>
     <File Name="Ui_MainWindow_bitmaps.xrc"/>
     <File Name="Ui_MainWindow.wxcp"/>
   </VirtualDirectory>
   <VirtualDirectory Name="Header Files">
-    <File Name="ImageFileTools.h"/>
+    <File Name="CpmGuiInterface.h"/>
+    <File Name="CpmTools.h"/>
     <File Name="MainWindow.h"/>
     <File Name="Ui_MainWindow.h"/>
   </VirtualDirectory>
   <Description/>
   <Dependencies/>
   <VirtualDirectory Name="Source Files">
-    <File Name="ImageFileTools.cpp"/>
+    <File Name="CpmGuiInterface.cpp"/>
+    <File Name="CpmTools.cpp"/>
     <File Name="Ui_MainWindow_bitmaps.cpp"/>
     <File Name="Ui_MainWindow.cpp"/>
     <File Name="MainWindow.cpp"/>
