--- a/CIFE/CIFE.project
+++ b/CIFE/CIFE.project
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <CodeLite_Project Name="CIFE" Version="11000" InternalType="GUI">
   <VirtualDirectory Name="Resource Files">
+    <File Name="Ui_FileAttributesDialog.wxcp"/>
     <File Name="Ui_RenameFileDialog.wxcp"/>
     <File Name="cife.rc"/>
     <File Name="Ui_MainWindow_bitmaps.xrc"/>
     <File Name="Ui_MainWindow.wxcp"/>
   </VirtualDirectory>
   <VirtualDirectory Name="Header Files">
+    <File Name="Ui_FileAttributesDialog.h"/>
+    <File Name="FileAttributesDialog.h"/>
     <File Name="Ui_RenameFileDialog.h"/>
     <File Name="RenameFileDialog.h"/>
     <File Name="Version.h"/>
@@ -18,6 +21,9 @@
   <Description/>
   <Dependencies/>
   <VirtualDirectory Name="Source Files">
+    <File Name="Ui_FileAttributesDialog_bitmaps.cpp"/>
+    <File Name="Ui_FileAttributesDialog.cpp"/>
+    <File Name="FileAttributesDialog.cpp"/>
     <File Name="Ui_RenameFileDialog_bitmaps.cpp"/>
     <File Name="Ui_RenameFileDialog.cpp"/>
     <File Name="RenameFileDialog.cpp"/>
