--- a/CIFE/CIFE.project
+++ b/CIFE/CIFE.project
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <CodeLite_Project Name="CIFE" Version="11000" InternalType="GUI">
   <VirtualDirectory Name="Resource Files">
+    <File Name="Ui_FileProtectionsDialog.wxcp"/>
     <File Name="Ui_FileAttributesDialog.wxcp"/>
     <File Name="Ui_RenameFileDialog.wxcp"/>
     <File Name="cife.rc"/>
@@ -8,6 +9,8 @@
     <File Name="Ui_MainWindow.wxcp"/>
   </VirtualDirectory>
   <VirtualDirectory Name="Header Files">
+    <File Name="Ui_FileProtectionsDialog.h"/>
+    <File Name="FileProtectionsDialog.h"/>
     <File Name="Ui_FileAttributesDialog.h"/>
     <File Name="FileAttributesDialog.h"/>
     <File Name="Ui_RenameFileDialog.h"/>
@@ -21,6 +24,9 @@
   <Description/>
   <Dependencies/>
   <VirtualDirectory Name="Source Files">
+    <File Name="Ui_FileProtectionsDialog_bitmaps.cpp"/>
+    <File Name="Ui_FileProtectionsDialog.cpp"/>
+    <File Name="FileProtectionsDialog.cpp"/>
     <File Name="Ui_FileAttributesDialog_bitmaps.cpp"/>
     <File Name="Ui_FileAttributesDialog.cpp"/>
     <File Name="FileAttributesDialog.cpp"/>
